@@ -19,18 +19,29 @@
     <properties>
         <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.json-schema-validator>1.0.29</version.json-schema-validator>
+        <project.main.class>com.networknt.server.Server</project.main.class>
         <version.light-4j>2.0.16</version.light-4j>
-        <version.jackson>2.10.0</version.jackson>
+        <version.jackson>2.10.4</version.jackson>
         <version.slf4j>1.7.25</version.slf4j>
-        <version.common-lang3>3.5</version.common-lang3>
+        <version.jose4j>0.6.3</version.jose4j>
         <version.logback>1.2.3</version.logback>
         <version.junit>4.12</version.junit>
-        <version.mockito>2.7.21</version.mockito>
-        <version.maven-javadoc>3.1.0</version.maven-javadoc>
+        <version.undertow>2.1.3.Final</version.undertow>
+        <version.json-schema-validator>1.0.29</version.json-schema-validator>
 
-        <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+        <version.hikaricp>3.1.0</version.hikaricp>
+        <version.h2>1.3.176</version.h2>
+
         <versions.maven-version>2.4</versions.maven-version>
+        <version.javadoc-packagelist-plugin>1.0.0</version.javadoc-packagelist-plugin>
+        <version.maven-javadoc>3.1.0</version.maven-javadoc>
+        <version.maven-jar>3.1.2</version.maven-jar>
+        <version.maven-shade>3.2.1</version.maven-shade>
+        <version.maven-compiler>3.8.1</version.maven-compiler>
+        <version.maven-deploy>2.8.2</version.maven-deploy>
+        <version.exec-maven>1.6.0</version.exec-maven>
+        <version.maven-surefire>2.22.2</version.maven-surefire>
+        <version.maven-source>3.1.0</version.maven-source>
     </properties>
 
 
@@ -165,23 +176,28 @@
         </dependency>
         <dependency>
             <groupId>com.networknt</groupId>
+            <artifactId>data-source</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
             <artifactId>openapi-parser</artifactId>
-            <version>${version.openapi-parser}</version>
+            <version>${version.light-4j}</version>
         </dependency>
         <dependency>
             <groupId>com.networknt</groupId>
             <artifactId>openapi-meta</artifactId>
-            <version>${version.light-rest-4j}</version>
+            <version>${version.light-4j}</version>
         </dependency>
         <dependency>
             <groupId>com.networknt</groupId>
             <artifactId>openapi-security</artifactId>
-            <version>${version.light-rest-4j}</version>
+            <version>${version.light-4j}</version>
         </dependency>
         <dependency>
             <groupId>com.networknt</groupId>
             <artifactId>openapi-validator</artifactId>
-            <version>${version.light-rest-4j}</version>
+            <version>${version.light-4j}</version>
         </dependency>
 
         <dependency>
